# bsw-test

./: pyproject.toml
line-provider/: .env.example  app.py  config.py  db.py  logger.py  main.py
line-provider/alembic/: env.py
line-provider/alembic/versions/: 4b61ef373b7a_events.py
line-provider/api/v1/: event.py  root.py
line-provider/common/: enums.py
line-provider/models/: __init__.py  event.py  mixins.py
line-provider/repository/: base_repository.py  event_repository.py
line-provider/serializers/: event.py
line-provider/service/: events_service.py
